Update search plugins to adhere to interface changes.

--- a/GuitartabsDotCC.csproj
+++ b/GuitartabsDotCC.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="GuitartabsDotCCPlugin.cs" />
     <Compile Include="GuitartabsDotCCParser.cs" />
-    <Compile Include="GuitartabsDotCCSearch.cs" />
+    <Compile Include="GuitartabsDotCCSearchEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
